Fixed header and footer overflow issues and rewrote main.scss

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -7,7 +7,8 @@ footer {
     rgba(14, 63, 126, 0.04) 0px -24px 24px -12px;
   .footer-content {
     @include flex(center, space-between, row);
-    width: 125rem;
+    width: 100%;
+    max-width: 125rem;
     min-height: 10vh;
     margin: auto;
     padding: 2rem 0;
@@ -30,7 +31,6 @@ footer {
 @media screen and (max-width: 1250px) {
   footer {
     .footer-content {
-      width: 100%;
       margin: 0;
       padding: 2rem 5rem;
     }
