--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,10 +1,5 @@
 main {
-  width: 125rem;
+  width: 100%;
+  max-width: 125rem;
   margin: auto;
-}
-
-@media screen and (max-width: 1250px) {
-  main {
-    width: 100%;
-  }
 }
